trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 490
    'recurrent_dropout': trial.suggest_float("recurrent_dropout", 0.0, 0.3),
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: illegal target for annotation
